# exam-project

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
exam-project-0/: CMakeLists.txt  README.md  default_scene.cc  pistol.cc  player.cc  player.h  player_weapon_holder.h
exam-project-1/: CMakeLists.txt  README.md  default_scene.cc  pistol.h  player.cc  player.h  player_weapon_holder.cc
exam-project-1/resources/Sprites/: README.md
exam-project-2/: CMakeLists.txt  README.md  pistol.cc  pistol.h  player.cc  player_weapon_holder.cc  player_weapon_holder.h
exam-project-3/: CMakeLists.txt  README.md  default_scene.cc  pistol_bullet.cc  pistol_bullet.h  player.cc
exam-project-4/: CMakeLists.txt  README.md  enemy_spawner.cc  enemy_spawner.h  ghost.cc  ghost.h  pistol.h  player.h
exam-project-5/: CMakeLists.txt  README.md  default_scene.cc  ghost.cc  ghost.h  pistol.cc  pistol_bullet.cc  player.cc  player.h  player_weapon_holder.h
exam-project-6/: CMakeLists.txt  README.md  default_scene.cc  default_scene.h  enemy_spawner.cc  enemy_spawner.h  ghost.cc  ghost.h  pistol.cc  pistol.h  pistol_bullet.cc  player.cc  player.h  shooting_ghost.cc  shooting_ghost.h
exam-project-7/: CMakeLists.txt  README.md  default_scene.cc  enemy_spawner.cc  follow_player.cc  follow_player.h  game_manager.cc  game_manager.h  ghost.cc  ghost.h  ghost_bullet.cc  pistol_bullet.cc  pistol_bullet.h  player.cc  player.h  player_weapon_holder.cc  shooting_ghost.cc  shooting_ghost.h
exam-project-8/: CMakeLists.txt  README.md  enemy_spawner.cc  enemy_spawner.h  ghost_bullet.h  main.cc  pistol.cc  pistol.h  player.cc  player.h  player_weapon_holder.cc  player_weapon_holder.h  ui_manager.cc  ui_manager.h
exam-project-9/: CMakeLists.txt  README.md  default_scene.cc  enemy_spawner.cc  enemy_spawner.h  game_manager.cc  game_manager.h  ghost.cc  ghost.h  ghost_bullet.cc  goblin.cc  goblin.h  goblin_pistol.cc  goblin_pistol.h  goblin_pistol_bullet.cc  goblin_pistol_bullet.h  goblin_weapon_holder.cc  goblin_weapon_holder.h  health_pickup.cc  health_pickup.h  large_bullet_pickup.cc  large_bullet_pickup.h  lose_canvas.cc  lose_canvas.h  pistol.cc  pistol.h  pistol_bullet.cc  player.cc  player_weapon_holder.cc  player_weapon_holder.h  shooting_ghost.cc  shooting_ghost.h  tile_id.h  win_canvas.cc  win_canvas.h
