cmake_minimum_required(VERSION 3.28)
project(exam-project)

add_subdirectory(third-party)
add_subdirectory(exam-project-0)
add_subdirectory(exam-project-1)
add_subdirectory(exam-project-2)
add_subdirectory(exam-project-3)
add_subdirectory(exam-project-4)
add_subdirectory(exam-project-5)
add_subdirectory(exam-project-6)
add_subdirectory(exam-project-7)
add_subdirectory(exam-project-8)
add_subdirectory(exam-project-9)